Added ui fixes for grid direction

--- a/templates/admin_people.gohtml
+++ b/templates/admin_people.gohtml
@@ -3,7 +3,7 @@
     {{template "admin_header" "People Admin"}}
     {{template "alert" .alerts}}
     <div class="top-grid-container">
-        <div class="grid-x grid-padding-x">
+        <div class="grid-y grid-padding-y">
             <div class="cell">
                 <table class="hover">
                     <thead>
