--- a/templates/downloads.gohtml
+++ b/templates/downloads.gohtml
@@ -4,7 +4,7 @@
     {{template "alert" .alerts}}
 
     <div class="top-grid-container">
-        <div class="grid-x grid-padding-x">
+        <div class="grid-y grid-padding-y">
             <div class="cell">
                 <table class="hover">
                     <thead>
