--- a/templates/mission.gohtml
+++ b/templates/mission.gohtml
@@ -9,7 +9,6 @@
             <div class="grid-x grid-padding-x">
                 <div class="cell medium-3">
                     <h1>Mission Summary</h1>
-                    <hr>
                     <dl>
                         <dt>Creator</dt>
                         <dd><a href="/profile/{{ .mission.PersonID }}">{{ .mission.PersonName }}</a></dd>
@@ -20,28 +19,31 @@
                         <dt>Updated On</dt>
                         <dd>{{ datetime .mission.UpdatedOn }}</dd>
                         <dt>Mission State</dt>
-                        <dd>{{ .mission.MissionState }}</dd>
+                        <dd>{{template "display_state" .mission.MissionState}}</dd>
+                        <dt>Area Bounding Box</dt>
+                        <dd>
+                            <div class="grid-x grid-padding-x">
+                                <div class="cell">
+                                    <div class="cell medium-6">
+                                        <span>{{ fmtFloat .mission.BoundingBox.LatUL 5}}</span>
+                                    </div>
+                                    <div class="cell medium-6">
+                                        <span>{{ fmtFloat .mission.BoundingBox.LongUL 5 }}</span>
+                                    </div>
+                                </div>
+                                <div class="cell">
+                                    <div class="cell medium-6">
+                                        <span>{{ fmtFloat .mission.BoundingBox.LatLR 5 }}</span>
+                                    </div>
+                                    <div class="cell medium-6">
+                                        <span>{{ fmtFloat .mission.BoundingBox.LongLR 5 }}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </dd>
                     </dl>
-                    <h5>Area Bounding Box</h5>
-                    <div class="grid-container">
-                        <div class="grid-x grid-padding-x">
-                            <div class="cell">
-                                <div class="cell medium-6">
-                                    <span>{{ fmtFloat .mission.BoundingBox.LatUL 5}}</span>
-                                </div>
-                                <div class="cell medium-6">
-                                    <span>{{ fmtFloat .mission.BoundingBox.LongUL 5 }}</span>
-                                </div>
-                            </div>
-                            <div class="cell">
-                                <div class="cell medium-6">
-                                    <span>{{ fmtFloat .mission.BoundingBox.LatLR 5 }}</span>
-                                </div>
-                                <div class="cell medium-6">
-                                    <span>{{ fmtFloat .mission.BoundingBox.LongLR 5 }}</span>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="cell">
+                        <a class="button medium expanded success" href="/upload?mission_id={{.mission.MissionID}}">Upload File</a>
                     </div>
                     <h5>Flights Summary ({{ len .flights }})</h5>
                     {{range .flights }}
@@ -53,77 +55,76 @@
                     {{end}}
                 </div>
                 <div class="cell medium-9">
-                    <div class="grid-container">
-                        <div class="grid-y grid-padding-y">
-                            <div class="cell">
-                                <ul class="tabs" data-tabs id="example-tabs">
-                                    <li class="tabs-title is-active">
-                                        <a style="margin-bottom: 0; font-size: 125%;" href="#panel1"
-                                           aria-selected="true" class="button">Live Map</a>
-                                    </li>
-                                    <li class="tabs-title">
-                                        <a style="margin-bottom: 0; font-size: 125%;" data-tabs-target="panel2"
-                                           href="#panel2" class="button">Downloads</a>
-                                    </li>
-                                </ul>
-                                <div class="tabs-content" data-tabs-content="example-tabs">
-                                    <div class="tabs-panel is-active" id="panel1">
-                                        <div id="map"
-                                             data-lat_ul="{{ .mission.BoundingBox.LatUL }}"
-                                             data-lon_ul="{{ .mission.BoundingBox.LongUL }}"
-                                             data-lat_lr="{{ .mission.BoundingBox.LatLR }}"
-                                             data-lon_lr="{{ .mission.BoundingBox.LongLR }}"
-                                        ></div>
-                                    </div>
-                                    <div class="tabs-panel" id="panel2">
-                                        <table class="hover">
-                                            <thead>
+
+                    <div class="grid-y grid-padding-y">
+                        <div class="cell">
+                            <ul class="tabs" data-tabs id="example-tabs">
+                                <li class="tabs-title is-active">
+                                    <a style="margin-bottom: 0; font-size: 125%;" href="#panel1"
+                                       aria-selected="true" class="button">Live Map</a>
+                                </li>
+                                <li class="tabs-title">
+                                    <a style="margin-bottom: 0; font-size: 125%;" data-tabs-target="panel2"
+                                       href="#panel2" class="button">Downloads</a>
+                                </li>
+                            </ul>
+                            <div class="tabs-content" data-tabs-content="example-tabs">
+                                <div class="tabs-panel is-active" id="panel1">
+                                    <div id="map"
+                                         data-lat_ul="{{ .mission.BoundingBox.LatUL }}"
+                                         data-lon_ul="{{ .mission.BoundingBox.LongUL }}"
+                                         data-lat_lr="{{ .mission.BoundingBox.LatLR }}"
+                                         data-lon_lr="{{ .mission.BoundingBox.LongLR }}"
+                                    ></div>
+                                </div>
+                                <div class="tabs-panel" id="panel2">
+                                    <table class="hover">
+                                        <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Size</th>
+                                            <th>Updated</th>
+                                            <th>Download</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {{range .files }}
                                             <tr>
-                                                <th>Name</th>
-                                                <th>Size</th>
-                                                <th>Updated</th>
+                                                <td>{{ .FileName }}</td>
+                                                <td>{{ human .FileSize }}</td>
+                                                <td>{{ datetime .UpdatedOn }}</td>
+                                                <td>
+                                                    <a class="button" href="/download/{{ .FileID }}">Download</a>
+                                                </td>
                                             </tr>
-                                            </thead>
-                                            <tbody>
-                                            {{range .files }}
-                                                <tr>
-                                                    <td>{{ .FileName }}</td>
-                                                    <td>{{ human .FileSize }}</td>
-                                                    <td>{{ datetime .UpdatedOn }}</td>
-                                                    <td>
-                                                        <a class="button" href="/download/{{ .FileID }}">Download</a>
-                                                    </td>
-                                                </tr>
-                                            {{end}}
-                                            </tbody>
-                                        </table>
-                                    </div>
+                                        {{end}}
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="cell">
+                        <div class="cell">
+                            <div class="grid-y grid-padding-y">
+                                <div class="cell" id="live_chat">
 
-                                    <div class="grid-y grid-padding-y">
-                                        <div class="cell" id="live_chat">
-
-                                        </div>
-                                        <div class="cell" id="chat_input_container">
-                                            <label>
-                                                Message & System Log
-                                                <form>
-                                                    <div class="grid-x">
-                                                        <div class="cell medium-10">
-                                                            <input type="text" name="message">
-                                                        </div>
-                                                        <div class="cell medium-2">
-                                                            <input style="margin-bottom: 0" class="button expanded" type="submit"
-                                                                   value="Send">
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </label>
-                                        </div>
-
+                                </div>
+                                <div class="cell" id="chat_input_container">
+                                    <label>
+                                        Message & System Log
+                                        <form>
+                                            <div class="grid-x">
+                                                <div class="cell medium-10">
+                                                    <input type="text" name="message">
+                                                </div>
+                                                <div class="cell medium-2">
+                                                    <input style="margin-bottom: 0" class="button expanded"
+                                                           type="submit"
+                                                           value="Send">
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </label>
                                 </div>
                             </div>
                         </div>
