--- a/templates/uploads.gohtml
+++ b/templates/uploads.gohtml
@@ -3,7 +3,7 @@
     {{template "alert" .alerts}}
 
     <div class="top-grid-container">
-        <div class="grid-x grid-padding-x">
+        <div class="grid-y grid-padding-y">
 
             <div class="cell">
                 <a href="/upload" class="button large success">Upload File</a>
