--- a/templates/about.gohtml
+++ b/templates/about.gohtml
@@ -23,7 +23,7 @@
 
             </div>
             <div class="cell small-4">
-                {{ img "/dist/assets/dw.jpg" "" false }}
+                {{ img "/dist/assets/dw.png" "" false }}
             </div>
         </div>
     </div>
