--- a/templates/background.gohtml
+++ b/templates/background.gohtml
@@ -19,7 +19,7 @@
                     extends across the spectrum into colour, near-infrared and hyper-spectral based solutions.</p>
             </div>
             <div class="cell small-4">
-                {{ img "/dist/assets/dw.png" "" false }}
+                {{ img "/dist/images/dw.png" "" false }}
             </div>
         </div>
         <div class="grid-x grid-padding-x text-center">
