--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -71,7 +71,7 @@
             <div class="cell medium-4">
                 <a href="/services/wildfire">
                     <div class="callout text-center" data-equalizer-watch>
-                        <img src="/dist/assets/badge_area.png" alt="">
+                        <img src="/dist/images/badge_area.png" alt="">
                         <h3 class="subheader font_med">Large Area Survey</h3>
                         <p>High speed and accuracy flyovers at high-altitude.</p>
                         <p>Flown at any time day or night, active fire is easily picked up with our thermal imaging
@@ -82,7 +82,7 @@
             <div class="cell medium-4">
                 <a href="/services/wildfire">
                     <div class="callout text-center" data-equalizer-watch>
-                        <img src="/dist/assets/badge_hotspot.png" alt="">
+                        <img src="/dist/images/badge_hotspot.png" alt="">
                         <h3 class="subheader font_med">Hotspot Patrol</h3>
                         <p>Low altitude flyover - high resolution and accuracy for precision discovery and surveillance
                             of smouldering areas and hotspots.</p>
@@ -92,7 +92,7 @@
             <div class="cell medium-4">
                 <a href="/services/wildfire">
                     <div class="callout text-center" data-equalizer-watch>
-                        <img src="/dist/assets/badge_perimeter.png" alt="">
+                        <img src="/dist/images/badge_perimeter.png" alt="">
                         <h3 class="subheader font_med">Perimeter Mapping</h3>
                         <p>Map and monitor fire fronts to update an accurate perimeter for improved planning and asset
                             distribution.</p>
@@ -111,7 +111,7 @@
         </div>
         <div class="grid-x grid-padding-x" style="margin-top: 20px; margin-bottom: 20px">
             <div class="cell">
-                <img alt="Industries" src="/dist/assets/triangles.png" style="width: 100%">
+                <img alt="Industries" src="/dist/images/triangles.png" style="width: 100%">
             </div>
         </div>
     </div>
@@ -168,7 +168,7 @@
 
     <div class="grid-container" style="margin-bottom: 0; margin-top: 0">
         <div class="grid-x grid-padding-x" style="margin-bottom: 0; margin-top: 0">
-            <img alt="Hyper Spectral Water" src="/dist/assets/home_footer_12_2.png">
+            <img alt="Hyper Spectral Water" src="/dist/images/home_footer_12_2.png">
         </div>
     </div>
 {{end}}
