--- a/templates/layouts/layout.gohtml
+++ b/templates/layouts/layout.gohtml
@@ -62,7 +62,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Verimap Plus Inc. - {{ template "title" }}</title>
-        <link rel="icon" type="image/png" href="/dist/assets/logo_sm.png"/>
+        <link rel="icon" type="image/png" href="/dist/images/logo_sm.png"/>
         <link rel="stylesheet" href="/dist/main.css"/>
     </head>
     <body>
@@ -71,7 +71,7 @@
             <div class="grid-container">
                 <div class="grid-x grid-padding-x align-middle ">
                     <div class="cell small-6">
-                        <a href="/"><img alt="Verimap Logo" src="/dist/assets/logo_lg.png"></a>
+                        <a href="/"><img alt="Verimap Logo" src="/dist/images/logo_lg.png"></a>
                     </div>
                     <div class="cell small-6 text-right">
                         <div class="grid-x grid-padding-x align-center-middle text-right">
@@ -168,7 +168,7 @@
             <div class="grid-container">
                 <div class="grid-x grid-padding-x">
                     <div class="cell small-6">
-                        <a href="/"><img alt="Verimap Logo" src="/dist/assets/logo_lg.png"></a>
+                        <a href="/"><img alt="Verimap Logo" src="/dist/images/logo_lg.png"></a>
                         <p style="margin-top: 2rem">VeriMap provides remote sensing solutions for all types of projects.
                             Ask
                             us
