--- a/templates/partners.gohtml
+++ b/templates/partners.gohtml
@@ -12,7 +12,7 @@
                             <div class="grid-y">
                                 <div class="cell">
                                     <figure>
-                                        <img src="/dist/assets/{{ .Img }}">
+                                        <img src="/dist/images/{{ .Img }}">
                                         <h4>{{ .Name }}</h4>
                                         <hr>
                                         <p>{{ .Desc }}</p>
