--- a/templates/wildfire.gohtml
+++ b/templates/wildfire.gohtml
@@ -31,7 +31,7 @@
                         <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Large Area Survey</a>
                     </div>
                     <div class="cell">
-                        <img alt="Large Area Survey" src="/dist/assets/wms_1.png">
+                        <img alt="Large Area Survey" src="/dist/images/wms_1.png">
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                         <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Hotspotting</a>
                     </div>
                     <div class="cell align-center">
-                        <img alt="Hotspotting" src="/dist/assets/wms_2.png">
+                        <img alt="Hotspotting" src="/dist/images/wms_2.png">
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                         <a href="#" class="button small gradient_bg font_bold" style="width: 100%">Perimeter Mapping</a>
                     </div>
                     <div class="cell align-center">
-                        <img alt="Perimeter Mapping" src="/dist/assets/wms_3.png">
+                        <img alt="Perimeter Mapping" src="/dist/images/wms_3.png">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                             Tracking</a>
                     </div>
                     <div class="cell align-center">
-                        <img alt="ROW & Corridor Tracking" src="/dist/assets/wms_4.png">
+                        <img alt="ROW & Corridor Tracking" src="/dist/images/wms_4.png">
                     </div>
                 </div>
             </div>
