--- a/src/scss/_foundationSettings.scss
+++ b/src/scss/_foundationSettings.scss
@@ -803,18 +803,18 @@ $table-stack-breakpoint: medium;
 // --------
 
 $tab-margin: 0;
-$tab-background: $white;
-$tab-color: $primary-color;
-$tab-background-active: $light-gray;
-$tab-active-color: $primary-color;
+$tab-background: $primary-color;
+$tab-color: $white;
+$tab-background-active: lighten($primary-color, 10%);
+$tab-active-color: $white;
 $tab-item-font-size: rem-calc(12);
-$tab-item-background-hover: $white;
-$tab-item-padding: 1.25rem 1.5rem;
+$tab-item-background-hover: lighten($primary-color, 10%);
+$tab-item-padding: 1.0rem 1.25rem;
 $tab-expand-max: 6;
 $tab-content-background: $white;
 $tab-content-border: $light-gray;
 $tab-content-color: $body-font-color;
-$tab-content-padding: 1rem;
+$tab-content-padding: 0rem;
 
 // 52. Thumbnail
 // -------------
