--- a/templates/mission.gohtml
+++ b/templates/mission.gohtml
@@ -65,11 +65,11 @@
                                 </li>
                                 <li class="tabs-title">
                                     <a style="margin-bottom: 0; font-size: 125%;" data-tabs-target="panel2"
-                                       href="#panel2" class="button">Downloads</a>
+                                       href="#panel2" class="button">Downloads ({{len .files }})</a>
                                 </li>
                             </ul>
                             <div class="tabs-content" data-tabs-content="example-tabs">
-                                <div class="tabs-panel is-active" id="panel1">
+                                <div class="tabs-panel is-active" id="panel1" style="padding: 0 !important;">
                                     <div id="map"
                                          data-lat_ul="{{ .mission.BoundingBox.LatUL }}"
                                          data-lon_ul="{{ .mission.BoundingBox.LongUL }}"
@@ -77,7 +77,7 @@
                                          data-lon_lr="{{ .mission.BoundingBox.LongLR }}"
                                     ></div>
                                 </div>
-                                <div class="tabs-panel" id="panel2">
+                                <div class="tabs-panel" id="panel2" style="padding: 0 !important;">
                                     <table class="hover">
                                         <thead>
                                         <tr>
@@ -112,18 +112,15 @@
                                 <div class="cell" id="chat_input_container">
                                     <label>
                                         Message & System Log
-                                        <form>
+
                                             <div class="grid-x">
                                                 <div class="cell medium-10">
-                                                    <input type="text" name="message">
+                                                    <input type="text" name="message" id="chat_message">
                                                 </div>
                                                 <div class="cell medium-2">
-                                                    <input style="margin-bottom: 0" class="button expanded"
-                                                           type="submit"
-                                                           value="Send">
+                                                    <button style="margin-bottom: 0" class="button expanded" id="chat_submit">Send</button>
                                                 </div>
                                             </div>
-                                        </form>
                                     </label>
                                 </div>
                             </div>
